--- a/sass/assets/variables.scss
+++ b/sass/assets/variables.scss
@@ -11,5 +11,7 @@ $gray-color: #656565;
 $white-color: #FDFFFC;
 $white-shadow: #E4E6E3;
 
+$error-color: #F93943;
+
 // Typograph
 $font-family: 'Poppins', sans-serif;
