--- a/css/index.css
+++ b/css/index.css
@@ -38,17 +38,17 @@ section {
   text-align: center;
   margin-bottom: 24px;
 }
-.container form {
+.container main {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.container form .input {
+.container main .input {
   width: 100%;
   background-color: #FDFFFC;
   border-radius: 8px;
-  border: none;
+  border: 1px solid #FDFFFC;
   outline: none;
   padding: 8px 12px;
   font-size: 16px;
@@ -56,17 +56,17 @@ section {
   margin-bottom: 16px;
   transition: 0.5s;
 }
-.container form .input::placeholder {
+.container main .input::placeholder {
   color: #656565;
 }
-.container form .input:focus {
+.container main .input:focus {
   background-color: #E4E6E3;
   color: #668000;
 }
-.container form .group-btn {
+.container main .group-btn {
   margin-top: 24px;
 }
-.container form .group-btn button {
+.container main .group-btn button {
   cursor: pointer;
   border-radius: 4px;
   border: none;
@@ -76,17 +76,30 @@ section {
   padding: 8px 16px;
   transition: 0.5s;
 }
-.container form .group-btn .convert {
+.container main .group-btn .convert {
   background-color: #CEFF01;
 }
-.container form .group-btn .convert:hover {
+.container main .group-btn .convert:hover {
   background-color: #99BF00;
 }
-.container form .group-btn .exchange {
+.container main .group-btn .exchange {
   background-color: #FDFFFC;
 }
-.container form .group-btn .exchange:hover {
+.container main .group-btn .exchange:hover {
   background-color: #E4E6E3;
+}
+
+#error {
+  align-self: flex-start;
+  color: #F93943;
+  font-size: 14px;
+  margin-top: -12px;
+  margin-bottom: 4px;
+}
+
+.error {
+  border: 1px solid #F93943 !important;
+  color: #F93943 !important;
 }
 
 /*# sourceMappingURL=index.css.map */
