--- a/sass/index.scss
+++ b/sass/index.scss
@@ -41,7 +41,7 @@ section {
         margin-bottom: 24px;
     }
 
-    form {
+    main {
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -51,7 +51,7 @@ section {
             width: 100%;
             background-color: $white-color;
             border-radius: 8px;
-            border: none;
+            border: 1px solid $white-color;
             outline: none;
             padding: 8px 12px;
             font-size: 16px;
@@ -99,4 +99,17 @@ section {
             }
         }
     }
+}
+
+#error {
+    align-self: flex-start;
+    color: $error-color;
+    font-size: 14px;
+    margin-top: -12px;
+    margin-bottom: 4px;
+}
+
+.error {
+    border: 1px solid $error-color !important;
+    color: $error-color !important;
 }
